Source/WebCore/rendering/svg/RenderSVGRoot.h
@@ -119,6 +119,7 @@ private:
     bool m_isLayoutSizeChanged : 1;
     bool m_needsBoundariesOrTransformUpdate : 1;
     bool m_hasSVGShadow : 1;
+    bool m_hasBoxDecorations : 1;
 };
 
 RENDER_OBJECT_TYPE_CASTS(RenderSVGRoot, isSVGRoot())
